ingress/tea-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
  namespace: study
spec:
  selector:
    matchLabels:
      app: tea
  replicas: 2
  template:
    metadata:
      labels:
        app: tea
    spec:
      restartPolicy: Always
      containers:
        - name: tea
          image: smileleo/tea:latest
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
          resources:
            requests:
              memory: 100Mi
              cpu: 500m
            limits:
              memory: 200Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: study
spec:
  selector:
    app: tea
  ports:
    - name: tea
      port: 8080
      targetPort: 8080
